<resources>
    <string name="app_name">IMG2TXT</string>
    <string name="hello">Welcome</string>
    <string name="ocr_hint">tap here to extract the text written on the page from Camera</string>
    <string name="ps_hint">note: IMG2TXT app can not identify handwritten text</string>
    <string name="gallery">Gallery</string>
    <string name="copied">copied successfully</string>
    <string name="no_text">no text found</string>
    <string name="identifying">Running OCR on image…</string>
    <string name="permissionHint">You must accept the permission to use camera and storage to let the app use camera inside the app to take image of books and papers</string>
    <string name="permissionStorageHint">You must accept the permission to access storage to let the app grab PDF files to be OCRed</string>
    <string name="image_to_ocr">image to OCR</string>
    <string name="get_image_from_gallery">get image from gallery</string>
    <string name="arrow_to_camera_icon">arrow to camera icon</string>
    <string name="pdf">Convert PDF to Text</string>
    <string name="showtxt">show the extracted text</string>
    <string name="showimg">show the image</string>
    <string name="cpy">OCR image then copy the extracted text</string>
    <string name="linkedin">Abanoub Hanna | LinkedIn</string>
    <string name="github">Abanoub Hanna | Github</string>
    <string name="telegram">Telegram group</string>
    <string name="youtube">Abanoub Hanna | YouTube</string>
    <string name="camera_button">capture an image with camera</string>
    <string name="gallery_button">grab an image from gallery</string>
    <string name="copy_extracted_text">copy extracted text</string>
    <string name="copy_text">Copy</string>
    <string name="about_me">
        My name is Abanoub Hanna
        \nsoftware developer
        \nI experienced coding in
        \n→ Java/Kotlin for Android app dev.
        \n→ Dart/Flutter for mobile app dev.
        \n→ PHP/Laravel for web apps and websites
        \n→ Go for CLI apps and web backend
        \n→ HTML/CSS/Tailwind for UI/frontend
        \n→ Javascript for frontend/DOM
    </string>
    <string name="camera">Camera</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="main_notice">
        Welcome
        \nI advice you to
        \n- tap on image icon to grab a picture from your gallery.
        \n- tap on camera icon to take a photo of a paper or document.
    </string>
    <string name="permissions_notice">
        You can not use camera to take photos of papers and documents because you did not grant the permissions to the app.
    </string>
    <string name="conf_notice">
        IMG2TXT app could not extract written text properly maybe because of bad quality of the image. Please choose another image or re-take the picture.
        \nnote: IMG2TXT OCR app can not extract handwritten text.
    </string>
    <string name="dev_image">photo of the app developer</string>
    <string name="google_play">Google Play</string>
    <string name="me">Abanoub Hanna</string>
    <string name="twitter">\@AbanoubHA | X (Twitter)</string>
    <string name="facebook">Abanoub Hanna | Facebook</string>
    <string name="arabicOrEnglishOrBoth">The image contains text in</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="both">Arabic+English</string>
    <string name="submit">Submit</string>
    <string name="color_codes_summary">
        <![CDATA[
        🔴 -49% 🟣 50:79% ⚪⚫ +80%
        ]]>
    </string>
    <string name="color_codes">
        <![CDATA[
        Words with color-coded accuracy (OCR confidence):
        \nthis tells you how confident the app in the identified word.
        \n-49% -> red 🔴
        \n50:79% -> purple 🟣
        \n+80% -> white/black ⚪⚫
        ]]>
    </string>
    <string name="copyright">© Abanoub Hanna</string>
    <string name="save_extracted_text">save extracted text</string>
    <string name="save_text">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all !</string>
</resources>
