<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/devImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/dev_image"
            android:scaleType="fitXY"
            android:src="@drawable/abanoub_hanna" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/about_me"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_twitter"
            android:text="@string/twitter"
            app:icon="@drawable/ic_twitter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fbBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_facebook"
            android:text="@string/facebook"
            app:icon="@drawable/ic_facebook" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_linkedin"
            android:text="@string/linkedin"
            app:icon="@drawable/ic_linkedin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ytBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_youtube"
            android:text="@string/youtube"
            app:icon="@drawable/ic_youtube" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_github"
            android:text="@string/github"
            app:icon="@drawable/ic_github" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/telegramBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_telegram"
            android:text="@string/telegram"
            app:icon="@drawable/ic_telegram" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/google_play_ic"
            android:text="@string/google_play"
            app:icon="@drawable/google_play_ic" />

    </LinearLayout>
</ScrollView>
