<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.softwarepharaoh.img2txt.MainActivity">
    <item
        android:id="@+id/points"
        android:icon="@drawable/ic_coins"
        android:orderInCategory="100"
        android:title="0"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_camera"
        android:orderInCategory="200"
        android:title="@string/camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_gallery"
        android:orderInCategory="300"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/abanoub_hanna"
        android:orderInCategory="400"
        android:title="@string/me"
        app:showAsAction="ifRoom" />
</menu>
